examples/test/testpolicy7529.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7529
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key24: value42
      key25: value6
      key42: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value41
          key5: value1
          key33: value11
      podSelector:
        matchLabels:
          key40: value49
